diagnose owner head residence and admission overlap